--- a/HTML/product.htm
+++ b/HTML/product.htm
@@ -285,7 +285,7 @@
       </div>
       <div class="text__btn-read-more__picture__block">
         <div class="text-blur__block">
-          <img class="blur__picture" src="/img/png/Rectangle 22.png" alt="" />
+          <img class="blur__picture" src="../img/png/Rectangle 22.png" alt="" />
           <div class="text__btn-read-more__block">
             <div class="text-all__block">
               <p class="text__block">
@@ -324,7 +324,7 @@
           <div class="icon-text__block__item">
             <img
               class="transport-picture"
-              src="/img/svg/transport.svg"
+              src="../img/svg/transport.svg"
               alt=""
             />
             <p class="icon-text__block__text icon-transport-text">
@@ -332,17 +332,17 @@
             </p>
           </div>
           <div class="icon-text__block__item">
-            <img src="/img/svg/book.svg" alt="" />
+            <img src="../img/svg/book.svg" alt="" />
             <p class="icon-text__block__text icon-book-text">
               Индивидуальный дизайн
             </p>
           </div>
           <div class="icon-text__block__item">
-            <img src="/img/svg/construction.svg" alt="" />
+            <img src="../img/svg/construction.svg" alt="" />
             <p class="icon-text__block__text">Бесплатная примерка</p>
           </div>
           <div class="icon-text__block__item">
-            <img src="/img/svg/jewelry.svg" alt="" />
+            <img src="../img/svg/jewelry.svg" alt="" />
             <p class="icon-text__block__text icon-jewelry-text">
               Личный подход
             </p>
@@ -359,7 +359,7 @@
             <li class="mailing-list__list-element">
               <img
                 class="mailing-list__list-img"
-                src="/img/svg/subscribe__icon.svg"
+                src="../img/svg/subscribe__icon.svg"
                 alt=""
               />
               <p>Личный менеджер</p>
@@ -367,7 +367,7 @@
             <li class="mailing-list__list-element">
               <img
                 class="mailing-list__list-img"
-                src="/img/svg/subscribe__icon.svg"
+                src="../img/svg/subscribe__icon.svg"
                 alt=""
               />
               <p>Доставка и оформление</p>
@@ -375,7 +375,7 @@
             <li class="mailing-list__list-element">
               <img
                 class="mailing-list__list-img"
-                src="/img/svg/subscribe__icon.svg"
+                src="../img/svg/subscribe__icon.svg"
                 alt=""
               />
               <p>Индивидуальный дизайн</p>
@@ -426,10 +426,10 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ullamcorper
             justo, nec, pellentesque.
           </p>
-          <img src="/img/jpg/VISA.jpg" alt="" />
+          <img src="../img/jpg/VISA.jpg" alt="" />
           <img
             class="footer__mastercard"
-            src="/img/jpg/mastercard.jpg"
+            src="../img/jpg/mastercard.jpg"
             alt=""
           />
         </div>
